--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,20 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: about.qmd
+        text: About
+      - href: projects.qmd
+        text: Projects
+      - href: field_photos
+        text: Field Photos
+      - href: resume.qmd
+        text: Resume
+      - href: cv.qmd
+        text: CV
+    right:
+      - icon: github
+        href: https://github.com/RebeccaLMartinez
+        aria-label: GitHub
 
 format:
   html:
@@ -16,6 +29,4 @@ format:
       - brand
     css: styles.css
     toc: true
-
-
 
