--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,9 @@ project:
 
 website:
   title: "Rebecca Martinez"
+  search:
+    location: navbar
+    type: overlay
   # navbar:
   #  left:
   #    - href: index.qmd
