--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,30 +4,18 @@ project:
 
 website:
   title: "Rebecca Martinez"
-  search:
-    location: navbar
-    type: overlay
-  # navbar:
-  #  left:
-  #    - href: index.qmd
-  #      text: Home
-  #    - href: about.qmd
-  #      text: About
-  #    - href: projects.qmd
-  #      text: Projects
-  #    - href: resume.qmd
-  #      text: Résumé
-  #    - href: cv.qmd
-  #      text: CV
   page-footer:
-    center: |
-      [📧](mailto:rebecca_martinez@ucsb.edu)
-      [GitHub](https://github.com/RebeccaLMartinez)
-      <div class="footer-nav">
-
+    left: "© 2025 Rebecca Martinez"
+    right:
+      - icon: github
+        href: https://github.com/RebeccaLMartinez
+      - icon: envelope
+        href: mailto:rebecca_martinez@ucsb.edu
+      
 format:
   html:
     theme: darkly
     css: styles.css
     toc: true
     include-after-body: _footer.html
+    
